--- a/packages/nekomata-ui/package.json
+++ b/packages/nekomata-ui/package.json
@@ -43,6 +43,7 @@
     "svelte-check": "^2.2.4",
     "svelte-jester": "^1.8.2",
     "svelte-preprocess": "^4.7.4",
+    "tar": "^6.1.9",
     "ts-jest": "^27.0.4",
     "tslib": "^2.3.0",
     "typescript": "^4.3.5",
